--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,10 @@
 __pycache__/
 local_settings.py
 db.sqlite3
+play.txt
 # media
 insta_env
+
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
