--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,11 @@ dj-database-url==0.5.0
 Django==1.11.17
 django-bootstrap3==11.0.0
 django-cleanup==3.2.0
+django-contrib-comments==1.9.1
 django-crispy-forms==1.7.2
 django-extensions==2.1.6
 django-heroku==0.3.1
+django-vote==2.1.7
 gunicorn==19.9.0
 Pillow==6.0.0
 psycopg2==2.8.2
